feat(port): 端口即 SVC，端口独立管理、服务类型下沉到端口
- 数据模型: t_port 新增 service_type；t_service 移除 service_type（类型不再在服务上声明）
- 端口在「端口/SVC」页独立管理（栈级列表，带服务名回填），create/update 带 serviceType，
  删除为物理删除（释放端口名）；Docker 忽略 serviceType（宿主端口映射不变）
- K8s 运行时: 每个端口一个 SVC（名 {服务名}-{端口}），类型取端口 serviceType
  （自动：≤2767→NodePort 30000+port，否则 ClusterIP；显式 NodePort >2767 交给 k8s 分配），
  状态暴露地址按服务聚合多个 SVC；重部署清理已删端口的残留 SVC
- 前端: 服务表单移除「服务类型」，新增「端口/SVC」tab（服务/协议/端口/类型 + 增删改），
  服务展开区端口改为只读展示
- 单测更新到端口级模型；51 全绿；真机验证多端口多类型 SVC、删端口清 SVC